navbar-slider error solved

--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,14 +1,11 @@
-* {
-  padding: 0;
-  margin: 0;
-  overflow-x: hidden;
-}
+
 
 .slider {
   width: 93vw;
   height: 100vh;
   position: relative;
   margin: 0 3rem;
+  overflow-y: hidden;
 }
 
 .slider-container {
@@ -16,7 +13,7 @@
   overflow: hidden;
   border: white solid 1px;
   height: 85vh;
-  margin-top: 3rem;
+  margin-top: 5rem;
 }
 
 .slide {
