--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,15 +1,12 @@
-*{
-    padding:0;
-    margin:0;
-}
+
 .header{
-    /* position:fixed; */
+    position:fixed;
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
     background-color:aqua;
-    z-index: 0;
+    z-index: 1000;
 }
 
 .logoDiv{
@@ -62,7 +59,8 @@
 @media screen and (max-width : 768px){
      
       .navBar{
-        background-color: yellow;
+        
+        background-color:  #B2BEB5 ;
         height: 100vh;
         position: absolute;
         padding: 1rem;
